--- a/src/components/buttons/button.module.scss
+++ b/src/components/buttons/button.module.scss
@@ -1,7 +1,7 @@
 @use '../../utils/styles/base/_variables' as v;
 @import url("../../utils/styles/base/_normalize.scss");
 
-* {
+button, button > * {
   font-family: "Inter", sans-serif;
 }
 
@@ -64,39 +64,46 @@
   .Button {
     gap: 4px;
     font-size: 14px;
-    padding: 8px 14px;
-    border-radius: 6px;
+    padding: 14px 24px;
+    border-radius: 8px;
 
     svg {
-      font-size: 18px;
+      font-size: 20px;
     }
   }
 
   .SelectButton {
-    justify-content: center;
-    padding: 30px 24px;
-    max-width: 250px;
-    width: 100%;
-
-    &:hover {
-      color: white;
-      background-color: v.$dark-shade-10;
-      border: 1px solid v.$dark-shade-15;
-    }
-  }
-
-  .ActiveSelectButton {
-    color: v.$grey-shade-60;;
-    background-color: v.$dark-shade-10;
-    border: 1px solid v.$dark-shade-15;
+    padding: 24px 20px;
+    border-radius: 7px;
+    max-width: 200px;
   }
 
   .PostButton {
-    gap: 5px;
-    color: v.$grey-shade-60;
-    background-color: v.$dark-shade-10;
-    border: 1px solid v.$dark-shade-15;
+    gap: 2px;
+    padding: 6px 12px;
     border-radius: 100px;
-    padding: 8px 16px;
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .Button {
+    padding: 14px 20px;
+    border-radius: 8px;
+
+    svg {
+      font-size: 20px;
+    }
+  }
+
+  .SelectButton {
+    padding: 18px 16px;
+    border-radius: 7px;
+    max-width: 150px;
+  }
+
+  .PostButton {
+    gap: 2px;
+    padding: 6px 12px;
+    border-radius: 100px;
   }
 }
