--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -104,6 +104,9 @@ h3, p {
   .Footer > :first-child ul > *:not(:last-child) {
     margin-bottom: 12px;
   }
+  .Footer > :first-child ul button {
+    padding: 8px 14px;
+  }
   .Footer > :first-child ul .NewBlock {
     padding: 2px 10px;
     border-radius: 4px;
@@ -134,21 +137,27 @@ h3, p {
   }
   .Footer > :first-child {
     flex-wrap: wrap;
-    padding: 60px 0;
+    padding: 40px 0;
     gap: 20px;
+    max-width: 868px;
   }
   .Footer > :first-child > *:not(:last-child) {
-    display: flex;
-    justify-content: center;
     width: calc(50% - 10px);
   }
   .Footer > :first-child > *:not(:last-child) ul {
     max-width: 200px;
     width: 100%;
   }
-  .Footer > :first-child > :last-child {
+  .Footer > :first-child > * {
     display: flex;
-    justify-content: center;
+  }
+  .Footer > :first-child > *:nth-child(odd) {
+    justify-content: start;
+  }
+  .Footer > :first-child > *:nth-child(even) {
+    justify-content: end;
+  }
+  .Footer > :first-child > :last-child {
     width: 100%;
   }
   .Footer > :first-child > :last-child ul {
