--- a/src/components/main/blogs/style.module.css
+++ b/src/components/main/blogs/style.module.css
@@ -1,8 +1,4 @@
 @import url("../../../utils/styles/base/_normalize.scss");
-* {
-  font-family: "Inter", sans-serif;
-}
-
 .TabsContainer {
   background-color: #141414;
 }
@@ -37,7 +33,6 @@
 }
 .TabsContainer .PostContainer > div > :last-child {
   align-self: center;
-  flex-wrap: nowrap;
 }
 .TabsContainer .PostContainer > div .PostContainerLeft {
   display: flex;
@@ -63,7 +58,7 @@
 .TabsContainer .PostContainer > div .PostContainerRight {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 50px;
   width: 50%;
 }
 .TabsContainer .PostContainer > div .PostContainerRight > p {
@@ -87,6 +82,121 @@
 .TabsContainer .PostContainer > div .PostContainerRight > :last-child {
   display: flex;
   gap: 10px;
+}
+
+@media screen and (max-width: 1680px) {
+  .TabsContainer .SelectContainer {
+    padding: 40px 80px;
+  }
+  .TabsContainer .SelectContainer > div {
+    gap: 14px;
+  }
+  .TabsContainer .PostContainer {
+    padding: 60px 80px;
+  }
+  .TabsContainer .PostContainer > div {
+    gap: 40px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerLeft {
+    gap: 10px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerLeft img {
+    width: 60px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerLeft div h3 {
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerLeft div p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight {
+    gap: 40px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight > p {
+    color: #98989A;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight div h1 {
+    color: white;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 33px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight div p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight > :last-child {
+    gap: 8px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .TabsContainer .SelectContainer {
+    padding: 20px 16px;
+    overflow-x: scroll;
+  }
+  .TabsContainer .SelectContainer > div {
+    max-width: 868px;
+  }
+  .TabsContainer .PostContainer {
+    padding: 40px 16px;
+  }
+  .TabsContainer .PostContainer > div {
+    flex-wrap: wrap;
+    gap: 30px;
+    max-width: 868px;
+  }
+  .TabsContainer .PostContainer > div > :nth-child(1) {
+    flex-grow: 1;
+    order: 0;
+  }
+  .TabsContainer .PostContainer > div > :nth-child(2) {
+    width: 100%;
+    order: 2;
+  }
+  .TabsContainer .PostContainer > div > :nth-child(3) {
+    order: 1;
+  }
+  .TabsContainer .PostContainer > div .PostContainerLeft {
+    gap: 10px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerLeft div p {
+    color: #98989A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight {
+    gap: 20px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight > p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight div h1 {
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+  }
+  .TabsContainer .PostContainer > div .PostContainerRight div p {
+    color: #98989A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
