--- a/src/components/main/features/style.module.scss
+++ b/src/components/main/features/style.module.scss
@@ -2,22 +2,18 @@
 @use "../../../utils/styles/base/_mixin.scss" as m;
 @import url("../../../utils/styles/base/_normalize.scss");
 
-* {
-  font-family: "Inter", sans-serif;
-}
-
-.BlogContainer {
+.FeatureContainer {
   display: flex;
   justify-content: center;
   background-color: v.$dark-shade-08;
   padding: 0 162px;
   border-bottom: 1px solid v.$dark-shade-15;
 
-  .BlogContainerLeft {
+  .FeatureContainerLeft {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
+    gap: 50px;
     padding-right: 80px;
     max-width: 768px;
     width: 40%;
@@ -41,7 +37,7 @@
     border-right: 1px solid v.$dark-shade-15;
   }
 
-  .BlogContainerRight {
+  .FeatureContainerRight {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -62,6 +58,103 @@
 
       p {
         @include m.font(v.$grey-shade-60, 18px, 400, 27px)
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1680px) {
+  .FeatureContainer {
+    padding: 0 80px;
+
+    .FeatureContainerLeft {
+      gap: 40px;
+      padding-right: 60px;
+
+      img {
+        width: 60px;
+      }
+
+      div {
+        h1 {
+          @include m.font(white, 30px, 600, 45px);
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 16px, 400, 24px);
+        }
+      }
+    }
+
+    .FeatureContainerRight {
+      padding: 60px 0 60px 60px;
+
+      div {
+        padding: 30px;
+        border-radius: 10px;
+
+        h2 {
+          @include m.font(white, 20px, 500, 30px)
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 16px, 400, 24px)
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .FeatureContainer {
+    align-items: center;
+    flex-direction: column;
+    padding: 0 16px;
+
+    .FeatureContainerLeft {
+      gap: 20px;
+      padding: 50px 0;
+      border-right: none;
+      border-bottom: 1px solid v.$dark-shade-15;
+      width: 100%;
+      max-width: 868px;
+
+      img {
+        width: 50px;
+      }
+
+      div {
+        h1 {
+          @include m.font(white, 24px, 600, 36px);
+          margin-bottom: 6px;
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 14px, 400, 21px);
+        }
+      }
+    }
+
+    .FeatureContainerRight {
+      justify-content: center;
+      padding: 30px 16px;
+      gap: 10px;
+      width: 100%;
+      max-width: none;
+
+      div {
+        max-width: 868px;
+        width: 100%;
+        padding: 30px;
+        border-radius: 10px;
+
+        h2 {
+          @include m.font(white, 18px, 500, 27px)
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 14px, 400, 21px)
+        }
       }
     }
   }
