--- a/src/components/main/generalComponents/developer/style.module.css
+++ b/src/components/main/generalComponents/developer/style.module.css
@@ -9,7 +9,7 @@
   background-color: #1A1A1A;
   border: 1px solid #262626;
   padding: 10px;
-  width: 230px;
+  width: 218px;
 }
 .DeveloperContainer .DeveloperBlock > div {
   position: relative;
@@ -22,23 +22,20 @@
   border-radius: 100px;
 }
 .DeveloperContainer .DeveloperBlock :nth-child(2) {
-  left: -5%;
+  left: -7.5%;
 }
 .DeveloperContainer .DeveloperBlock :nth-child(3) {
-  left: -10%;
-}
-.DeveloperContainer .DeveloperBlock :nth-child(4) {
   left: -15%;
 }
-.DeveloperContainer .DeveloperBlock :nth-child(5) {
-  left: -20%;
+.DeveloperContainer .DeveloperBlock :nth-child(4) {
+  left: -22.5%;
 }
 .DeveloperContainer .DeveloperTopicBlock {
   border-radius: 12px;
   background-color: #141414;
   border: none;
   padding: 10px;
-  width: 194px;
+  width: 193px;
 }
 .DeveloperContainer .DeveloperTopicBlock > div {
   height: 50px !important;
@@ -46,6 +43,106 @@
 .DeveloperContainer .DeveloperTopicBlock canvas, .DeveloperContainer .DeveloperTopicBlock img {
   width: 50px !important;
   height: 50px !important;
+}
+.DeveloperContainer .DeveloperTopicBlock :nth-child(2) {
+  left: -5%;
+}
+.DeveloperContainer .DeveloperTopicBlock :nth-child(3) {
+  left: -10%;
+}
+.DeveloperContainer .DeveloperTopicBlock :nth-child(4) {
+  left: -15%;
+}
+
+@media screen and (max-width: 1680px) {
+  .DeveloperContainer .DeveloperBlock {
+    padding: 8px;
+    width: 174px;
+  }
+  .DeveloperContainer .DeveloperBlock > div {
+    height: 50px !important;
+  }
+  .DeveloperContainer .DeveloperBlock canvas, .DeveloperContainer .DeveloperBlock img {
+    width: 50px !important;
+    height: 50px !important;
+    border: 1px solid #666666;
+  }
+  .DeveloperContainer .DeveloperBlock :nth-child(2) {
+    left: -9%;
+  }
+  .DeveloperContainer .DeveloperBlock :nth-child(3) {
+    left: -18%;
+  }
+  .DeveloperContainer .DeveloperBlock :nth-child(4) {
+    left: -27%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock {
+    border-radius: 12px;
+    background-color: #141414;
+    border: none;
+    padding: 8px;
+    width: 149px;
+  }
+  .DeveloperContainer .DeveloperTopicBlock :nth-child(2) {
+    left: -7%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock :nth-child(3) {
+    left: -14%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock :nth-child(4) {
+    left: -21%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock > div {
+    height: 40px !important;
+  }
+  .DeveloperContainer .DeveloperTopicBlock canvas, .DeveloperContainer .DeveloperTopicBlock img {
+    width: 40px !important;
+    height: 40px !important;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .DeveloperContainer .DeveloperBlock {
+    width: 134px;
+  }
+  .DeveloperContainer .DeveloperBlock > div {
+    height: 40px !important;
+  }
+  .DeveloperContainer .DeveloperBlock canvas, .DeveloperContainer .DeveloperBlock img {
+    width: 40px !important;
+    height: 40px !important;
+  }
+  .DeveloperContainer .DeveloperBlock :nth-child(2) {
+    left: -12.5%;
+  }
+  .DeveloperContainer .DeveloperBlock :nth-child(3) {
+    left: -24%;
+  }
+  .DeveloperContainer .DeveloperBlock :nth-child(4) {
+    left: -36.5%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock {
+    border-radius: 12px;
+    background-color: #141414;
+    border: none;
+    padding: 8px;
+    width: 149px;
+  }
+  .DeveloperContainer .DeveloperTopicBlock :nth-child(2) {
+    left: -7%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock :nth-child(3) {
+    left: -14%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock :nth-child(4) {
+    left: -21%;
+  }
+  .DeveloperContainer .DeveloperTopicBlock > div {
+    height: 40px !important;
+  }
+  .DeveloperContainer .DeveloperTopicBlock canvas, .DeveloperContainer .DeveloperTopicBlock img {
+    width: 40px !important;
+    height: 40px !important;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
