--- a/src/components/main/generalComponents/resourceContainer/style.module.css
+++ b/src/components/main/generalComponents/resourceContainer/style.module.css
@@ -1,8 +1,4 @@
 @import url("../../../../utils/styles/base/_normalize.scss");
-h2, h3, p {
-  font-family: "Inter", sans-serif;
-}
-
 .ResourceContainer > div {
   display: flex;
   justify-content: center;
@@ -24,6 +20,35 @@ h2, h3, p {
   padding: 80px 0 80px 80px;
   width: 60%;
   max-width: 1152px;
+}
+
+@media screen and (max-width: 1680px) {
+  .ResourceContainer > div {
+    padding: 0 80px;
+  }
+  .ResourceContainer > div > :last-child {
+    gap: 24px;
+    padding: 60px 0 60px 60px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .ResourceContainer > div {
+    align-items: center;
+    flex-direction: column;
+    padding: 40px 16px;
+    gap: 40px;
+  }
+  .ResourceContainer > div > :first-child, .ResourceContainer > div > :last-child {
+    width: 100%;
+    max-width: 868px;
+  }
+  .ResourceContainer > div > :first-child {
+    border-right: none;
+  }
+  .ResourceContainer > div > :last-child {
+    border-top: 1px solid #262626;
+    padding: 40px 0 0 0;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
