--- a/src/components/main/resources/homeResources/style.module.css
+++ b/src/components/main/resources/homeResources/style.module.css
@@ -1,8 +1,4 @@
 @import url("../../../../utils/styles/base/_normalize.scss");
-h2, h3, p {
-  font-family: "Inter", sans-serif;
-}
-
 .TextBlock p {
   color: #98989A;
   font-size: 18px;
@@ -56,7 +52,7 @@ h2, h3, p {
 .ResourceContainerRight > span {
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 20px;
 }
 .ResourceContainerRight > span h2 {
   text-wrap: nowrap;
@@ -93,6 +89,129 @@ h2, h3, p {
 }
 .ResourceContainerRight > :last-child > :first-child {
   flex-grow: 0;
+}
+
+@media screen and (max-width: 1680px) {
+  .TextBlock p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .TextBlock h2 {
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+  }
+  .ResourceContainerLeft > div {
+    gap: 40px;
+    padding-right: 60px;
+  }
+  .ResourceContainerLeft > div > img {
+    width: 60px;
+  }
+  .ResourceContainerLeft > div h1 {
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 45px;
+  }
+  .ResourceContainerLeft > div p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .ResourceContainerLeft > div > :last-child > div {
+    gap: 30px;
+    border-radius: 8px;
+    padding: 20px;
+  }
+  .ResourceContainerRight > span {
+    gap: 16px;
+  }
+  .ResourceContainerRight > span h2 {
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+  }
+  .ResourceContainerRight > span p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .ResourceContainerRight > :last-child {
+    gap: 16px;
+  }
+  .ResourceContainerRight > :last-child > div {
+    padding: 24px;
+    border-radius: 8px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .TextBlock p {
+    color: #98989A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  .TextBlock h2 {
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+  .ResourceContainerLeft > div {
+    width: 100%;
+    gap: 20px;
+    padding-right: 0;
+  }
+  .ResourceContainerLeft > div > img {
+    width: 50px;
+  }
+  .ResourceContainerLeft > div h1 {
+    color: white;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+  }
+  .ResourceContainerLeft > div p {
+    color: #98989A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  .ResourceContainerLeft > div > :last-child > div {
+    padding: 20px 30px;
+  }
+  .ResourceContainerRight > span {
+    flex-direction: column;
+    align-items: start;
+    gap: 16px;
+  }
+  .ResourceContainerRight > span h2 {
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+  }
+  .ResourceContainerRight > span p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .ResourceContainerRight > :last-child {
+    gap: 16px;
+  }
+  .ResourceContainerRight > :last-child > div {
+    width: 100%;
+    padding: 24px;
+    border-radius: 8px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
