--- a/src/components/main/statBlock/style.module.css
+++ b/src/components/main/statBlock/style.module.css
@@ -9,13 +9,13 @@ h3, p {
 }
 .StatBlock h3 {
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .StatBlock h3, .StatBlock h3 p {
   color: white;
   font-size: 40px;
   font-weight: 600;
-  line-height: unset;
+  line-height: 60px;
 }
 .StatBlock h3 p {
   color: #FFD11A;
@@ -25,6 +25,47 @@ h3, p {
   font-size: 18px;
   font-weight: 400;
   line-height: unset;
+}
+
+@media screen and (max-width: 1680px) {
+  .StatBlock h3 {
+    margin-bottom: 2px;
+  }
+  .StatBlock h3, .StatBlock h3 p {
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 45px;
+  }
+  .StatBlock h3 p {
+    color: #FFD11A;
+  }
+  .StatBlock div > p {
+    color: #98989A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: unset;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .StatBlock h3 {
+    margin-bottom: 0;
+  }
+  .StatBlock h3, .StatBlock h3 p {
+    color: white;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+  }
+  .StatBlock h3 p {
+    color: #FFD11A;
+  }
+  .StatBlock div > p {
+    color: #98989A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
